# parser

./: .gitignore  Cargo.toml  README.md  TODO.md  mkdocs.yml  pyproject.toml
docs/: index.md  technical_decisions.md
parser/: __init__.py  parser.pyi
src/: form_data.rs  headers.rs  lib.rs  multipart.rs
tests/: test_multipart_parser.py  test_parser.py
