[package]
name = "parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]

[lib]
name = "parser"
crate-type = ["cdylib"]

[toolchain]
channel = "nightly"

[dependencies]
# TODO: Replace log by tracing.
log = "0.4.22"
pyo3 = { version = "0.22.5", features = [
    "extension-module",
    "auto-initialize",
] }
pyo3-log = "0.11.0"
